fixing settings spacing

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -60,6 +60,7 @@ form.satl_table table {
 #satl_table .howto, .satl_table .howto {
     margin-bottom:10px;
 }
+
 .togbox {
     padding: 0;
     width: 22px;
@@ -219,6 +220,15 @@ h3 span {
 .satl-settings #gallery-slide-switch a:visited {
   color: #FFF;
 }
+.satl-settings .tablenav {
+  margin: 30px 0 20px;
+}
+.satl-settings select {
+  font-size: 1.3em;
+  height: auto;
+  padding: 4px 10px;
+}
+
 input[type="submit"] {
   padding: 5px 24px 5px;
 }
@@ -271,11 +281,11 @@ a.btn:hover { color: #FFF; }
   border-radius: 4px;
 }
 input.btn {
-    height: 30px;
+    height: 33px;
     padding: 5px 10px;
 }
 input.btn:active {
-    height: 30px;
+    height: 33px;
     padding: 5px 10px;
 }
 ul.slide-order {
